# jackal

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  TODO.md  main.cpp  run_build.sh
ast/: CMakeLists.txt  arguments.hpp  binding.hpp  builder.hpp  context.hpp  data.hpp  executable.hpp  expression.hpp  expressions.hpp  form.hpp  function.hpp  function_call.hpp  include.hpp  member.hpp  node.hpp  number.hpp  operator.hpp  parameters.hpp  primitive.hpp  program.hpp  property_access.hpp  scope.hpp  type.hpp  type_identifier.hpp  value.hpp  value_identifier.hpp  variable.hpp  visitor.hpp
ast/src/: builder.hpp  expression.cpp  operator.cpp  program.cpp  value.cpp  visitor.cpp
ast/tests/: CMakeLists.txt  lexer_tests.cpp  token_tests.cpp
blog/: intro.md  readme.md
bytecode/: CMakeLists.txt  instruction.hpp  instruction_generator.hpp  opcode.hpp  operand.hpp  reg.hpp  vm.hpp
bytecode/src/: instruction.cpp  instruction_generator.cpp  opcode.cpp  operand.cpp  reg.cpp  vm.cpp
cli/: CMakeLists.txt  driver.hpp  options.hpp
cli/src/: driver.cpp  options.cpp
codegen/: CMakeLists.txt  code_generator.hpp  executable.hpp
codegen/c/: CMakeLists.txt  c_visitor.hpp  dependency.hpp  (+2 more)
lexer/: CMakeLists.txt  gps.hpp  lexer.hpp  token.hpp
logger/: setup.hpp
parser/: CMakeLists.txt  include.hpp  keywords.hpp  parse.hpp  parse_error.hpp  parser.hpp  results.hpp
tests/: CMakeLists.txt  catch.hpp  compilation_comparison.hpp  resource.hpp  test_main.cpp
tests/codegen/: c_codegen_tests.cpp
tests/lexer/: lexer_tests.cpp  token_tests.cpp
tests/parser/: parse_tests.cpp
tests/resources/: lexer_main.jkl  print_expression.c  print_expression.jkl  print_values.c  print_variable.c  print_variable.jkl
tests/util/: exec_tests.cpp  file_system_tests.cpp  result_tests.cpp  source_location_tests.cpp
util/: exec.hpp  exit.hpp  file_system.hpp  keywords.hpp  phantom.hpp  result.hpp  source_location.hpp
(+18 files in other folders)
